# ffi-templates

./: README.md
cpp-to-python/: CMakeLists.txt  README.md  pyproject.toml
cpp-to-python/src/: example.cpp  extension.cpp  main.py
cpp-to-rust/: .gitignore  Cargo.toml  README.md  build.rs
cpp-to-rust/src/: example.cpp  main.rs
python-to-cpp/: .gitignore  CMakeLists.txt  README  README.md  pyproject.toml
python-to-cpp/include/: python_helper.h
python-to-cpp/src/: example.py  main.cpp
python-to-rust/: Cargo.toml  README.md  build.rs  pyproject.toml
python-to-rust/.cargo/: config.toml
python-to-rust/src/: example.py  lib.rs  main.rs
rust-to-cpp/: CMakeLists.txt  Cargo.toml  README.md  build.rs
rust-to-cpp/src/: lib.rs  main.cpp
rust-to-python/: .gitignore  Cargo.toml  README.md  Taskfile.yml  build.rs  pyproject.toml
rust-to-python/src/: lib.rs
rust-to-python/tests/: test.py  test.rs
