[package]
name = "rust-to-python"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_to_python"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "stubgen"
path = "src/bin/stubgen.rs"


[dependencies]
pyo3 = "0.26.0"
pyo3-stub-gen = "0.13.1"
